rtponviftimestamp: fix state change function init/reset

When starting up we need to initialise things *before*
streaming starts, so before we chain up to the parent
class in the state change function. And when we shut
down the element, we need to reset things after streaming
has stopped, so after we chain up to the parent class
in the state change function.

https://bugzilla.gnome.org/show_bug.cgi?id=794353
https://bugzilla.gnome.org/show_bug.cgi?id=794290